feature: add authentication with jwt in project and create new endpoints user, profile and login
