# src/entities/login.ts
@@ -1,0 +1,15 @@
+import { Column, Entity, PrimaryGeneratedColumn } from "typeorm";
+
+@Entity("login")
+export class Login {
+
+    @PrimaryGeneratedColumn()
+    id: number;
+
+    @Column({ type: "text" })
+    email: string;
+
+    @Column({ type: "text" })
+    password: string;
+
+}
